2003-04-01  Mo DeJong  <mdejong@users.sourceforge.net>

	* patches/tix_sam.patch: Add patch to fix Tix
	install time problem with sam lib.

2003-03-30  Steven Johnson  <sjohnson@neurizon.net>

	*  gui/editorpane.tcl (Update_Layout): Set the cursor
	color to be the same as the default text foregorund
	color, so that the cursor is visible when the background
	color is changed to black (the default color).

2003-03-30  Roberto Yazon  <ryazonjr@cox.net>

	* gui/editorpane.tcl (InsertTab, Newline):
	Insert only the right amount of spaces to move cursor
	to next tab column. Read the edit-tabstop property
	to determine the equivalent number of spaces for a tab.

2003-03-28  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/sninit.tcl (sn_tcl_tk_init): Fix prepend
	of SN bin dir to the PATH env var on startup.
	The previous code used : as the PATH separator
	under Windows which was causing problems with exec.
	The problem manifested itself as a mysterious exec
	error when attempting to build with Cygwin make.
	[Bug 658173]

2003-03-11  Steven Johnson  <sjohnson@neurizon.net>

	* gui/projedit.tcl (add_files_cb): Use a foreach
	loop instead of an array set call since the
	join optimization used in the method broke
	when processing files where the name included
	a space.

2003-03-11  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/editorpane.tcl (InsertTab, Newline):
	Use string repeat instead of a for loop since
	it is more clear and executes more quickly.
	Re-implement the Newline proc, it was doing
	extra work when it was not needed and creating
	extra variables for no reason. Incorporate
	the translate tabs to spaces patch submitted
	by sjohnson@neurizon.net. [Bug 685173]

2003-02-18  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/fortran/fortran.y: Add patch from
	bug report 658664 to fix error generated by
	bison 1.75.

2003-02-18  Ian Roxborough  <irox@ix.netcom.com>

	* gui/text.tcl (tkTextUndoPop): When they are no